fix: correct DP→CP callback URL routing and registration API key
Three bugs found in final review:

1. Critical: ControlPlaneClient.sendStatus() appended /{processId}/dataflow/{state}
   to an already-complete callback URL, producing 404s on every DP callback.
   Fix: callbackAddress is now the base CP URL; ControlPlaneClient routes
   COMPLETED → /api/v1/dataflows/complete and all other states → /api/v1/dataflows/error.
   DataTransferAPIService updated to pass base URL (not path-suffixed).
   Add routing tests to ControlPlaneClientTest.

2. High: ControlPlaneRegistrationBean registration payload omitted apiKey,
   so the CP stored null and all DP callbacks were rejected with 401.
   Fix: include apiKey in payload when non-blank.
   DataPlaneRegistrationService.register() now upserts by endpoint so DP
   restarts update rather than duplicate their registration.

3. Medium: DataFlowService.VIRTUAL_THREAD_EXECUTOR used newCachedThreadPool()
   (platform threads) instead of newVirtualThreadPerTaskExecutor().

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>